# te-platform

./: .env  .gitignore  Makefile  Permissions.md  netlify.toml  render.yaml
te-backend/: .env  Internal Docs.md  README.md  build.sh  prestart.sh  pyproject.toml  requirements.txt  start.sh
te-backend/app/: main.py
te-backend/app/core/: permissions.py  security.py  service.py  settings.py
te-backend/app/database/: init_db.py  session.py
te-backend/app/ents/: api.py
te-backend/app/ents/application/: crud.py  dependencies.py  endpoints.py  models.py  schema.py
te-backend/app/ents/company/: crud.py  dependencies.py  endpoints.py  models.py  schema.py
te-backend/app/ents/documentation/: README.md  content-backup.html  content.html  endpoints.py
te-backend/app/ents/home/: crud.py  endpoints.py  models.py
te-backend/app/ents/learning/: crud.py  endpoints.py  models.py  schema.py
te-backend/app/ents/problem/: crud.py  endpoints.py  models.py  schema.py
te-backend/app/ents/referral/: crud.py  dependencies.py  endpoints.py  models.py  schema.py
te-backend/app/ents/referral_company/: crud.py  dependencies.py  endpoints.py  schema.py
te-backend/app/ents/referralcompany/: crud.py  dependencies.py  endpoints.py  models.py  schema.py
te-backend/app/ents/resume/: __init__.py  crud.py  endpoints.py  models.py  schema.py
te-backend/app/ents/resume_review/: __init__.py  crud.py  endpoints.py  models.py  schema.py
te-backend/app/ents/resumereview/: crud.py  endpoints.py  models.py  schema.py
te-backend/app/utilities/: constants.py  email.py
(+124 files in other folders)
